# opencoach

./: Dockerfile  README.md  pyproject.toml  pyvenv.cfg
opencoach-web/: package-lock.json  package.json
opencoach-web/src/app/: opencoach_conversation.tsx  page.tsx
src/opencoach/: coach.py  eval.py  main.py  websockets.py
