[project]
name = "opencoach"
version = "0.1.0"
description = "An Open Source coach"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agentevals>=0.0.8",
    "dotenv>=0.9.9",
    "langchain[anthropic]>=0.3.25",
    "langgraph>=0.4.8",
    "langmem>=0.0.1rc9",
    "openevals>=0.1.0",
    "websockets>=15.0.1",
]

[project.scripts]
opencoach = "opencoach.coach:main_cli"
opencoach_backend = "opencoach.websockets:main_cli"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opencoach"]
